<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="MPSquare">冒泡广场</string> 
    <string name="app_name">冒泡广场</string>
	<string name="allright">©2016-2017 lybf All Right reserved</string>  
	<string name="open">打开</string>
    <string name="close">关闭</string>
	<string name="Error">停止运行</string>
	<string name="send">发送</string>
	<string name="login">登录</string>
	<string name="password">密码</string>
    <string name="flashlight">手电筒</string>
	<string name="settings">设置</string>
	<string name="settings_title">设置</string>
	<string name="check_update">检查更新</string>
	<string name="feedback">反馈</string>
	<string name="about">关于</string>
	<string name="log_out">退出登录</string>
	<string name="error">很抱歉，《冒泡社区》在运行时出现了严重的错误.如果方便，请填写一些可能是重要的细节，列如应用出错前，你正在做什么(操作)等</string>
    <string name="error_us">Please fill in any details that may be important:setps to reproduce,what were you doing when problem occurred ,etc.</string>
	<string name="user_describe">这个人很懒，什么也没留下</string>
    <string name="email">邮箱</string>
    
    <!--注册 signup Activity-->
	<string name="sign_title">注册</string>
	<string name="sign_name">输入你想要的昵称</string>
	<string name="sign_email">输入你的邮箱</string>
	<string name="sign_Password">请输入你的密码</string>
	<string name="sign_aginEnterPassword">再次输入你的密码</string>

    <!--用户-->
    <string name="user_describe">这个人太懒了，什么也没留下</string>
    <string name="signup">注册</string>

    

    
    <string name="device_admin_description">此应用用于管理您的手机，开启后更好地管理您的手机</string>
    <string name="device_admin">冒泡广场</string>
    
    <string name="chatrobot">聊天机器人</string>
    
    <string name="feedbackInfo">请输入您的反馈内容/bug等</string>
    <string name="feedbackClass">反馈类型</string>
    <string name="connection">QQ/Email..</string>
    
</resources>
