<menu xmlns:android="http://schemas.android.com/apk/res/android">
		<item
		    android:title="其他">
				<menu	xmlns:app="http://schemas.android.com/apk/res-auto">
				<group android:checkableBehavior="single">
						<item
								android:id="@+id/检查更新"
								android:icon="@drawable/ic_nav_up"
								android:title="@string/check_update"/>
						<item
								android:id="@+id/关于"
								android:icon="@drawable/ic_nav_about"
								android:title="@string/about"/>
						<item
								android:id="@+id/反馈"
								android:icon="@drawable/ic_nav_feedback"
								android:title="@string/feedback"/>
						<item
								android:id="@+id/退出登录"
								android:icon="@drawable/ic_nav_close"
								android:title="@string/log_out"/>
				</group>
				</menu>
		</item>
    <item 
        android:id="@+id/设置"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"/>
</menu>
