<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:orientation="vertical">

	<android.support.design.widget.AppBarLayout
		android:layout_gravity="center_horizontal"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<android.support.v7.widget.Toolbar
			app:title="@string/feedback"
			app:layout_collapseMode="pin"
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:theme="@style/AppTheme.AppBarOverlay"
			app:popupTheme="@style/AppTheme.PopupOverlay"
			android:background="#00000000"/>

	</android.support.design.widget.AppBarLayout>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="8dp">

		<EditText
			android:layout_height="200dp"
			android:layout_width="match_parent"
			android:ems="10"
			android:gravity="top|left"
			android:hint="@string/feedbackInfo"/>

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:layout_height="match_parent"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:layout_width="wrap_content"
				android:text="类型："
				android:gravity="center"/>

			<Spinner
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"/>

		</LinearLayout>

		<EditText
			android:layout_height="50dp"
			android:layout_width="match_parent"
			android:hint="@string/feedbackClass"
			android:visibility="gone"/>

		<EditText
			android:layout_height="50dp"
			android:layout_width="match_parent"
			android:ems="10"
			android:layout_marginTop="10dp"
			android:hint="@string/connection"/>

	</LinearLayout>

</LinearLayout>

