<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            xmlns:toolbar="http://schemas.android.com/apk/res-auto"
            toolbar:title="@string/Error"
            app:layout_collapseMode="pin"
            android:id="@+id/toolbar_error"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
			android:theme="@style/AppTheme.AppBarOverlay"
            app:popupTheme="@style/AppTheme.AppBarOverlay"/>
    </android.support.design.widget.AppBarLayout>


    <TextView
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_width="match_parent"
        android:text="@string/error"
        android:textSize="13sp"
        android:typeface="monospace"
        android:textStyle="bold|italic|normal"/>

    <EditText
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="2000"
        android:layout_width="match_parent"
        android:maxHeight="100dp"
        android:hint="请输入错误前进行的操作信息以便我们处理"
        android:typeface="normal"
        android:textSize="14sp"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:clickable="false"
            android:checked="true"
            android:text="收集设备信息"/>

        <CheckBox
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="重启软件"
            android:layout_marginLeft="20dp"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <ScrollView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginBottom="45dp">

            <TextView
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_width="match_parent"
                android:id="@+id/error_message"
                android:textSize="13sp"
                android:textIsSelectable="true"/>

        </ScrollView>

        <com.gc.materialdesign.views.ButtonRectangle
            android:layout_height="45dp"
            android:text="@string/send"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</LinearLayout>

